
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int mode; } ;
struct sockaddr_ll {int ifr_flags; TYPE_1__ u; int ifr_name; int ifr_ifindex; int sll_ifindex; int sll_family; } ;
struct sockaddr {int dummy; } ;
struct iwreq {int ifr_flags; TYPE_1__ u; int ifr_name; int ifr_ifindex; int sll_ifindex; int sll_family; } ;
struct ifreq {int ifr_flags; TYPE_1__ u; int ifr_name; int ifr_ifindex; int sll_ifindex; int sll_family; } ;
typedef int sll ;
typedef int ifr ;


 int AF_PACKET ;
 int DELAY ;
 int* DESTINATION_MAC ;
 int EXIT_FAILURE ;
 int IFACE ;
 int IFF_BROADCAST ;
 int IFF_RUNNING ;
 int IFF_UP ;
 int IFNAMSIZ ;
 int IW_MODE_MONITOR ;
 int SIOCGIFFLAGS ;
 int SIOCGIFHWADDR ;
 int SIOCGIFINDEX ;
 int SIOCGIWMODE ;
 int SOCK_RAW ;
 char* SSID ;
 scalar_t__ bind (int,struct sockaddr*,int) ;
 int close (int) ;
 int exit (int ) ;
 scalar_t__ ioctl (int,int ,struct sockaddr_ll*) ;
 int memset (struct sockaddr_ll*,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int socket (int ,int ,int) ;
 int strncpy (int ,int ,int) ;
 int usleep (int ) ;
 int write (int,char*,int) ;

int
broadcast(char *packet, int len)
{
    struct sockaddr_ll sll;
    struct ifreq ifr;
    struct iwreq iwr;
    int sock, ret, count = 100;

    sock = socket( AF_PACKET, SOCK_RAW, 0x300 );
    if(sock < 0){
 perror("socket() failed");
 exit(EXIT_FAILURE);
    }

    memset( &ifr, 0, sizeof(ifr) );
    strncpy( ifr.ifr_name, IFACE, sizeof(ifr.ifr_name) );

    if( ioctl( sock, SIOCGIFINDEX, &ifr ) < 0 ){
 perror( "ioctl(SIOCGIFINDEX) failed" );
 close(sock);
 exit(EXIT_FAILURE);
    }

    memset( &sll, 0, sizeof(sll) );
    sll.sll_family = AF_PACKET;
    sll.sll_ifindex = ifr.ifr_ifindex;

    if( ioctl( sock, SIOCGIFHWADDR, &ifr ) < 0 )
    {
 perror( "ioctl(SIOCGIFHWADDR) failed" );
 close(sock);
 exit(EXIT_FAILURE);
    }

    memset( &iwr, 0, sizeof( struct iwreq ) );
    strncpy( iwr.ifr_name, IFACE, IFNAMSIZ );

    if( ioctl( sock, SIOCGIWMODE, &iwr ) < 0 )
 iwr.u.mode = IW_MODE_MONITOR;

    ifr.ifr_flags |= IFF_UP | IFF_BROADCAST | IFF_RUNNING;

    if ( (ioctl(sock, SIOCGIFFLAGS, &ifr)) < 0 ){
 perror("ioctl(SIOCGIFFLAGS) failed");
 close(sock);
 exit(EXIT_FAILURE);
    }

    if( bind( sock, (struct sockaddr *) &sll,
  sizeof( sll ) ) < 0 )
    {
 perror( "bind() failed" );
 close(sock);
 exit(EXIT_FAILURE);
    }

    while( count-- ){
 ret = write( sock, packet, len );
 if( ret < 0 ){
     perror("write() failed");
     close( sock );
     exit(EXIT_FAILURE);
 }
      usleep( DELAY );
    }
    return 0;
}
